Create a bookmark widget to test click function

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ flutter:
     - assets/no_image.png
     - assets/placeholder.png
     - assets/poster_placeholder.png
+    - assets/bookmark.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
