--- a/windows/.gitignore
+++ b/windows/.gitignore
@@ -61,7 +61,7 @@
 /packages/flutter/coverage/
 version
 analysis_benchmark.json
-/lib/api_keys/api_keys.dart
+/lib/api_keys/*.dart
 
 # packages file containing multi-root paths
 .packages.generated
